@@ -1,3 +1,10 @@
+/* $Id: upnpdev.h,v 1.1 2015/08/28 12:14:19 nanard Exp $ */
+/* Project : miniupnp
+ * Web : http://miniupnp.free.fr/
+ * Author : Thomas BERNARD
+ * copyright (c) 2005-2015 Thomas Bernard
+ * This software is subjet to the conditions detailed in the
+ * provided LICENSE file. */
 #ifndef UPNPDEV_H_INCLUDED
 #define UPNPDEV_H_INCLUDED
 
@@ -26,4 +33,4 @@ MINIUPNP_LIBSPEC void freeUPNPDevlist(struct UPNPDev * devlist);
 #endif
 
 
-#endif
+#endif /* UPNPDEV_H_INCLUDED */
